feat: backend secrets

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ name: cash_register
 services:
   postgres:
     image: "postgres:17.2-bookworm"
-    container_name: pg
+    container_name: crpg
     restart: always
     ports:
       - "5432:5432"
