--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -41,4 +41,11 @@ group :development, :test do
 
   # .env Variables
   gem "dotenv-rails", "~> 3.1"
+
+  # testing
+  gem "annotate"
+  gem "faker"
+  gem "database_cleaner-active_record"
+  gem "factory_bot_rails"
+  gem "rspec-rails"
 end
