--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           POSTGRES_USER: cash_register
           POSTGRES_PASSWORD: cash_register
-          POSTGRES_DB: cash_register_db
+          POSTGRES_DB: cash_register_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10ms
