feat: rspec ci edit dn name

--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup DB and Run Tests
         env:
           POSTGRES_HOST: localhost
-          POSTGRES_DB_NAME: cash_register_db
+          POSTGRES_DB_NAME: cash_register_test
           POSTGRES_PASSWORD: cash_register
           POSTGRES_USERNAME: cash_register
           POSTGRES_PORT: 5432
