--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -51,4 +51,5 @@ group :test do
   gem "database_cleaner-active_record"
   gem "factory_bot_rails"
   gem "rspec-rails"
+  gem "parallel_tests"
 end
