--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -44,6 +44,7 @@ jobs:
           bundler-cache: true
 
       - name: Setup DB and Run Tests
+        working-directory: ./backend
         env:
           POSTGRES_HOST: localhost
           POSTGRES_DB_NAME: cash_register_test
