--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -16,10 +16,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend
-
     services:
       postgres:
         image: postgres:15
@@ -44,7 +40,6 @@ jobs:
           bundler-cache: true
 
       - name: Setup DB and Run Tests
-        working-directory: ./backend
         env:
           POSTGRES_HOST: localhost
           POSTGRES_DB_NAME: cash_register_test
@@ -54,5 +49,6 @@ jobs:
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
+          cd backend
           bundle exec rake parallel:setup
           bundle exec rake parallel:spec
