--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -16,6 +16,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: backend
+
     services:
       postgres:
         image: postgres:15
@@ -49,6 +53,5 @@ jobs:
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
-          cd backend
           bundle exec rake parallel:setup
           bundle exec rake parallel:spec
