--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -53,5 +53,5 @@ jobs:
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
-          bundle exec rake parallel:setup
-          bundle exec rake parallel:spec
+          bin/rails parallel:setup
+          bin/rails parallel:spec
