feat: rspec ci cache path

--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           ruby-version: 3.3.0
           bundler-cache: true
+          cache-dependency-path: backend/Gemfile.lock
 
       - name: Setup DB and Run Tests
         env:
