--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -46,12 +46,12 @@ jobs:
       - name: Setup DB and Run Tests
         env:
           DB_HOST: localhost
-          DB_PORT: 5432
-          POSTGRES_DB: cash_register_test
+          POSTGRES_DB_NAME: cash_register_test
           POSTGRES_PASSWORD: cash_register
           POSTGRES_USERNAME: cash_register
+          POSTGRES_PORT: 5432
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
-          bin/rails parallel:setup
-          bin/rails parallel:spec
+          bundle exec rake parallel:setup
+          bundle exec rake parallel:spec
