--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -53,5 +53,6 @@ jobs:
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
+          cp config/database.test.yml config/database.yml
           bundle exec rake parallel:setup
           bundle exec rake parallel:spec
