--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -43,11 +43,11 @@ jobs:
           working-directory: backend
           bundler-cache: true
 
-      - name: Setup DB and Run Tests
+      - name: Setup Database
         env:
-          DB_HOST: localhost
-          POSTGRES_DB_NAME: cash_register_test
-          POSTGRES_PASSWORD: cash_register
+          POSTGRES_HOST: localhost
+          POSTGRES_DB_NAME: cash_register_db
+          POSTGRES_PASSWORD: password
           POSTGRES_USERNAME: cash_register
           POSTGRES_PORT: 5432
           RAILS_ENV: test
@@ -55,4 +55,14 @@ jobs:
         run: |
           cp config/database.test.yml config/database.yml
           bundle exec rake parallel:setup
-          bundle exec rake parallel:spec
+
+      - name: Run tests
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_DB_NAME: cash_register_db
+          POSTGRES_PASSWORD: password
+          POSTGRES_USERNAME: cash_register
+          POSTGRES_PORT: 5432
+          RAILS_ENV: test
+          PARALLEL_TEST_PROCESSORS: 2
+        run: bundle exec rake parallel:spec
