--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -53,6 +53,7 @@ jobs:
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
         run: |
+          cd backend
           cp config/database.test.yml config/database.yml
           bundle exec rake parallel:setup
 
@@ -65,4 +66,6 @@ jobs:
           POSTGRES_PORT: 5432
           RAILS_ENV: test
           PARALLEL_TEST_PROCESSORS: 2
-        run: bundle exec rake parallel:spec
+        run: |
+          cd backend
+          bundle exec rake parallel:spec
