feat: rspec ci update pg env

--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -23,8 +23,8 @@ jobs:
           - 5432:5432
         env:
           POSTGRES_USER: cash_register
-          POSTGRES_PASSWORD: cash_register
-          POSTGRES_DB: cash_register_test
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: cash_register_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10ms
