--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -43,7 +43,7 @@ jobs:
           working-directory: backend
           bundler-cache: true
 
-      - name: Setup Database
+      - name: Setup database and run test
         env:
           POSTGRES_HOST: localhost
           POSTGRES_DB_NAME: cash_register_db
@@ -55,15 +55,4 @@ jobs:
         run: |
           cp config/database.test.yml config/database.yml
           bundle exec rake parallel:setup
-
-      - name: Run tests
-        env:
-          POSTGRES_HOST: localhost
-          POSTGRES_DB_NAME: cash_register_db
-          POSTGRES_PASSWORD: password
-          POSTGRES_USERNAME: cash_register
-          POSTGRES_PORT: 5432
-          RAILS_ENV: test
-          PARALLEL_TEST_PROCESSORS: 2
-        run: |
           bundle exec rake parallel:spec
