--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -7,12 +7,16 @@ on:
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
+      - '.github/workflows/frontend-build.yml'
+      - '.github/workflows/frontend-deploy.yml'
   pull_request:
     branches: 
       - main
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
+      - '.github/workflows/frontend-build.yml'
+      - '.github/workflows/frontend-deploy.yml'
   workflow_dispatch:
 
 jobs:
