--- a/.github/workflows/rspec_ci.yml
+++ b/.github/workflows/rspec_ci.yml
@@ -7,12 +7,16 @@ on:
     paths:
       - 'backend/**'
       - '.github/workflows/rspec-ci.yml'
+      - '.github/workflows/backend-build.yml'
+      - '.github/workflows/backend-deploy.yml'
   pull_request:
     branches: 
       - main
     paths:
       - 'backend/**'
       - '.github/workflows/rspec-ci.yml'
+      - '.github/workflows/backend-build.yml'
+      - '.github/workflows/backend-deploy.yml'
 
 jobs:
   test:
