feat: backend build cd update

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - main
     paths:
-      - 'Backend/**'
+      - 'backend/**'
       - '.github/workflows/backend-build.yml'
   workflow_dispatch:
 
